--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,32 +1,44 @@
+$background-color: #606060;
+$active-color: #202020;
+$inactive-color: #808080;
+$window-background-color: #FFFFFF;
+$font-color: #FFFFFF;
+$backdrop-color:  rgba(0, 0, 0, 0.25);
+$window-footer-background-color: #E0E0E0;
+$taskbar-background-color: #F0F0F0;
+$icon-background-color: #404060;
+
 .fenestra-desktop {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-color: #606060; }
+  position: absolute;  
+  top: 0; left: 0; bottom: 0; right: 0;
+  background-color: $background-color;
+}
 
 .fenestra-desktop-windows {
   background-color: transparent;
+
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
-  bottom: 50px;
-  overflow: auto; }
+  bottom: 50px; 
+
+  overflow: auto;
+}
 
 .fenestra-desktop-icons {
   background-color: transparent;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 0; left: 0;
+
   display: flex;
-  flex-direction: column;
+	flex-direction: column;
   flex-wrap: wrap;
   flex-grow: 1;
-  justify-content: flex-start;
-  align-items: stretch;
-  align-content: flex-start; }
+  justify-content: flex-start;  
+	align-items: stretch;
+  align-content: flex-start;
+}
 
 .fenestra-desktop-icon {
   width: 150px;
@@ -34,122 +46,147 @@
   margin: 5px 0 0 5px;
   padding: 0px;
   display: block;
-  background-color: #404060; }
+  background-color: $icon-background-color;
+}
 
 .fenestra-desktop-windows-holder {
   position: relative;
   top: 0;
   left: 0;
-  background-color: transparent; }
+  background-color: transparent;
+}
 
 .fenestra-taskbar {
   position: absolute;
   bottom: 0px;
   height: 50px;
   width: 100%;
+
   padding: 0px;
   margin: 0px;
-  background-color: #F0F0F0;
+
+  background-color: $taskbar-background-color;
+
   display: flex;
   align-items: center;
-  z-index: 1000; }
+
+  z-index: 1000;
+}
 
 .fenestra-taskbar-buttons {
   overflow: auto;
   height: 100%;
+
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   flex-grow: 1;
-  align-items: stretch; }
+  align-items: stretch;
+}
 
-.fenestra-taskbar-button {
+.fenestra-taskbar-button {  
   margin: 5px;
   padding: 5px;
   margin-right: 0;
-  white-space: nowrap;
+
+  white-space: nowrap; 
   overflow: hidden;
   text-overflow: ellipsis;
+  
   appearance: none;
-  border: solid #808080 1px;
-  background-color: #808080;
-  color: #FFFFFF;
+  border: solid $inactive-color 1px;
+  background-color: $inactive-color;
+  color: $font-color;
   border-radius: 6px;
   display: flex;
-  justify-content: center; }
+  justify-content: center
+}
 
 .fenestra-taskbar-button-active {
-  background-color: #202020; }
+background-color: $active-color;
+}
+
 
 .fenestra-taskbar-button-desktop {
+
   display: block;
+
   margin: 5px;
   margin-left: auto;
   width: 40px;
   height: 40px;
-  white-space: nowrap;
+
+  white-space: nowrap; 
   overflow: visible;
-  text-overflow: clip; }
+  text-overflow: clip;
+}
 
 .fenestra-window {
   position: absolute;
-  background-color: #FFFFFF;
+  background-color: $window-background-color;
   display: flex;
   align-items: flex-start;
   align-content: stretch;
   flex-direction: column;
   z-index: 1;
-  border: solid #606060 1px;
+
+  border: solid $background-color 1px;
   border-top-left-radius: 7px;
-  border-top-right-radius: 7px; }
+  border-top-right-radius: 7px;  
+}
 
 .fenestra-window-active {
-  z-index: 2; }
+  z-index: 2;
+}
 
 .fenestra-window-maximized {
   top: 0px;
   left: 0px;
   right: 0px;
   bottom: 0px;
-  border-radius: 0px; }
+  border-radius: 0px;  
+}
 
 .fenestra-window-minimized {
-  display: none; }
-
+  display: none;
+  
+}
 .fenestra-window-title {
+
   cursor: default;
   width: 100%;
   padding: 5px !important;
   font-weight: bold;
-  background-color: #808080;
-  color: #FFFFFF;
+
+  background-color: $inactive-color;
+  color: $font-color;
+
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+
   display: flex;
   white-space: nowrap;
   align-items: center;
-  -webkit-touch-callout: none;
-  /* iOS Safari */
-  -webkit-user-select: none;
-  /* Safari */
-  -khtml-user-select: none;
-  /* Konqueror HTML */
-  -moz-user-select: none;
-  /* Firefox */
-  -ms-user-select: none;
-  /* Internet Explorer/Edge */
-  user-select: none;
-  /* Non-prefixed version, currently
-                                  supported by Chrome and Opera */ }
+
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
 
 .fenestra-window-active
 .fenestra-window-title {
-  background-color: #202020; }
+  background-color: $active-color;
+}
 
 .fenestra-window-title-buttons {
   margin-left: auto;
   display: flex;
-  flex-wrap: nowrap; }
+  flex-wrap: nowrap;
+}
 
 .fenestra-window-body {
   width: 100%;
@@ -161,7 +198,9 @@
   flex-grow: 1;
   align-content: stretch;
   align-self: stretch;
-  margin: 0px; }
+  margin: 0px;
+
+}
 
 .fenestra-window-footer {
   width: 100%;
@@ -170,12 +209,14 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  align-content: center;
-  background-color: #E0E0E0;
-  border-top: solid white 1px;
+  align-content: center; 
+  background-color: $window-footer-background-color;
+  
+  border-top: solid white 1px;  
   border-left: solid white 1px;
   border-right: solid #404040 1px;
-  border-bottom: solid #404040 1px; }
+  border-bottom: solid #404040 1px;
+}
 
 .fenestra-window-resize {
   cursor: nwse-resize;
@@ -187,7 +228,8 @@
   text-decoration: none;
   appearance: none;
   border: none;
-  background-color: transparent; }
+  background-color: transparent;  
+}
 
 .fenestra-desktop-background {
   position: absolute;
@@ -197,34 +239,37 @@
   bottom: 0;
   overflow: hidden;
   z-index: -1;
-  width: 100%; }
+  width: 100%;
+}
 
 .fenestra-datatable-header {
-  cursor: default; }
+  cursor: default;
+}
 
 .fenestra-datatable-actions {
   width: 1%;
   text-align: center;
   display: flex;
-  flex-wrap: nowrap; }
+  flex-wrap: nowrap;
+}
 
 .fenestra-select {
   -moz-appearance: none;
   -webkit-appearance: none;
-  appearance: none; }
+  appearance: none;
+}
 
 .fenestra-loading {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #FFFFFF;
+  color: $font-color; 
+
   position: absolute;
   z-index: 1000;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-color: rgba(0, 0, 0, 0.25);
-  text-align: center;
+  top: 0; left: 0; bottom: 0; right: 0;
+  background-color: $backdrop-color;
+  text-align: center;  
   z-index: 100000;
-  font-size: 60pt; }
+  font-size: 60pt;
+}
