--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -6,12 +6,16 @@ $font-color: #FFFFFF;
 $backdrop-color:  rgba(0, 0, 0, 0.25);
 $window-footer-background-color: #E0E0E0;
 $taskbar-background-color: #F0F0F0;
-$icon-background-color: #404060;
+$icon-background-color: #404040;
 
 .fenestra-desktop {
   position: absolute;  
-  top: 0; left: 0; bottom: 0; right: 0;
-  background-color: $background-color;
+  top: 0; 
+  left: 0; 
+  bottom: 0;
+  right: 0;
+  background-color: $background-color; 
+  
 }
 
 .fenestra-desktop-windows {
@@ -24,6 +28,16 @@ $icon-background-color: #404060;
   bottom: 50px; 
 
   overflow: auto;
+}
+
+.fenestra-desktop-maximized 
+.fenestra-desktop-windows {
+  overflow: hidden;
+}
+
+.fenestra-desktop-moving
+.fenestra-desktop-windows {
+  overflow: hidden;
 }
 
 .fenestra-desktop-icons {
@@ -46,7 +60,7 @@ $icon-background-color: #404060;
   margin: 5px 0 0 5px;
   padding: 0px;
   display: block;
-  background-color: $icon-background-color;
+  background-color: $icon-background-color !important;
 }
 
 .fenestra-desktop-windows-holder {
@@ -109,10 +123,10 @@ background-color: $active-color;
 
 .fenestra-taskbar-button-desktop {
 
-  display: block;
+  display: flex !important;
 
   margin: 5px;
-  margin-left: auto;
+  margin-left: auto !important;
   width: 40px;
   height: 40px;
 
@@ -144,7 +158,8 @@ background-color: $active-color;
   left: 0px;
   right: 0px;
   bottom: 0px;
-  border-radius: 0px;  
+  border-radius: 0px;
+  border: none;
 }
 
 .fenestra-window-minimized {
@@ -190,7 +205,7 @@ background-color: $active-color;
 
 .fenestra-window-body {
   width: 100%;
-  padding: 15px;
+  padding: 0;
   position: relative;
   overflow: auto;
   display: flex;
@@ -218,6 +233,11 @@ background-color: $active-color;
   border-bottom: solid #404040 1px;
 }
 
+.fenestra-window-maximized
+.fenestra-window-footer {
+  border: none;
+}
+
 .fenestra-window-resize {
   cursor: nwse-resize;
   color: black !important;
@@ -229,6 +249,11 @@ background-color: $active-color;
   appearance: none;
   border: none;
   background-color: transparent;  
+}
+
+.fenestra-window-maximized
+.fenestra-window-resize {
+  display: none;
 }
 
 .fenestra-desktop-background {
@@ -272,4 +297,50 @@ background-color: $active-color;
   text-align: center;  
   z-index: 100000;
   font-size: 60pt;
+}
+
+.fenestra-taskbar-button-windows {
+  display: none !important;
+}
+
+@media (max-width: 576px) {
+
+  body {
+    overflow-y: hidden;
+  }  
+
+  .fenestra-taskbar-button-windows {
+    display: block !important    ;
+  }
+
+  .fenestra-taskbar-button-windows:focus + .fenestra-taskbar-buttons {
+    display: block !important;
+    bottom: 50px;
+    left: 0px;
+    right: 0px;
+
+    max-height: 200px;
+  }
+
+  .fenestra-taskbar-buttons {
+
+    display: none;
+
+    position: absolute;
+    
+    background-color: $taskbar-background-color;
+    border: solid white 1px;
+    padding: 5px;
+
+    overflow-y: auto; 
+    height: auto;
+
+  }
+
+  .fenestra-taskbar-buttons .fenestra-taskbar-button { 
+    display: block;
+    width: 100%;
+    margin: 5px 0px;
+  }
+
 }
