--- a/src/styles/css/theme.css
+++ b/src/styles/css/theme.css
@@ -22,16 +22,15 @@
 .fenestra-taskbar-button {
   appearance: none;
   border-radius: 6px;
-  border: solid lightblue 1px;
+  border: solid #A0C0FF 1px;
   color: white;
-  background-color: lightblue;
+  background-color: #A0C0FF;
   transition: background-color 0.5s; }
 
 .fenestra-taskbar-button-desktop {
   margin: 5px;
   margin-left: auto !important;
   width: 40px;
-  height: 40px;
   white-space: nowrap;
   overflow: visible;
   text-overflow: clip; }
@@ -47,7 +46,7 @@
   box-shadow: 5px 5px 5px 2px rgba(0, 0, 0, 0.3);
   transition: all 0.25s cubic-bezier(0.5, 1.5, 0.5, 1); }
 
-.fenestra-desktop-moving
+.fenestra-desktop-moving >
 .fenestra-window {
   transition: none; }
 
@@ -55,14 +54,18 @@
   font-weight: bold;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-  background-color: lightblue;
+  background-color: #A0C0FF;
   color: white;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
-  transition: background-color 0.5s; }
+  transition: background-color 0.25s ease; }
 
-.fenestra-window-active
+.fenestra-window-active >
 .fenestra-window-header {
+  background-color: #000080; }
+
+.fenestra-window-active >
+.fenestra-window-header:hover {
   background-color: blue; }
 
 .fenestra-window-body {
@@ -82,7 +85,8 @@
   .fenestra-taskbar-buttons {
     background-color: lightblue;
     border: solid white 1px; }
-  .fenestra-taskbar-buttons .fenestra-taskbar-button {
+  .fenestra-taskbar-buttons >
+.fenestra-taskbar-button {
     display: block;
     width: 100%;
     margin: 5px 0px; } }
