--- a/src/styles/scss/theme.scss
+++ b/src/styles/scss/theme.scss
@@ -1,6 +1,10 @@
 $background-color: #A0C0FF;
 $active-color: blue;
-$inactive-color: lightblue;
+$active-title-color1: #000080;
+$active-title-color2: blue;
+$inactive-color: #A0C0FF;
+$inactive-title-color1: #B0B0B0;
+$inactive-title-color2: #E0E0E0;
 $font-color: white;
 $backdrop-color:  rgba(0, 0, 0, 0.25);
 $window-footer-background-color: #E0E0E0;
@@ -9,7 +13,7 @@ $taskbar-background-color: lightblue;
 $icon-background-color: lightblue;
 
 .fenestra-desktop {
-  background-color: $background-color; 
+  background-color: $background-color;
 }
 
 .fenestra-desktop-icon {
@@ -29,6 +33,7 @@ $icon-background-color: lightblue;
 .fenestra-taskbar {
   background-color: $taskbar-background-color;
 }
+
 .fenestra-taskbar-buttons {
   background-color: $taskbar-background-color;
 }
@@ -49,8 +54,6 @@ $icon-background-color: lightblue;
   margin: 5px;
   margin-left: auto !important;
   width: 40px;
-  height: 40px;
-
   white-space: nowrap; 
   overflow: visible;
   text-overflow: clip;
@@ -69,7 +72,8 @@ $icon-background-color: lightblue;
   transition: all 0.25s cubic-bezier(0.5, 1.5, 0.5, 1);
 }
 
-.fenestra-desktop-moving
+
+.fenestra-desktop-moving >
 .fenestra-window {
   transition: none;
 }
@@ -82,19 +86,25 @@ $icon-background-color: lightblue;
   border-top-right-radius: $window-border-radius;
 
   background-color: $inactive-color;
+
   color: $font-color;  
 
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 
-  transition: background-color 0.5s;
+  transition: background-color 0.25s ease;
 
 
 }
 
-.fenestra-window-active
+.fenestra-window-active >
 .fenestra-window-header {
-  background-color: $active-color;
+  background-color: $active-title-color1;
+}
+
+.fenestra-window-active >
+.fenestra-window-header:hover {
+  background-color: $active-title-color2;
 }
 
 
@@ -123,7 +133,8 @@ $icon-background-color: lightblue;
     border: solid white 1px;    
   }
 
-  .fenestra-taskbar-buttons .fenestra-taskbar-button { 
+  .fenestra-taskbar-buttons > 
+  .fenestra-taskbar-button { 
     display: block;
     width: 100%;
     margin: 5px 0px;
